--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,5 +1,3 @@
-@import "tailwindcss";
-
-@plugin "daisyui" {
-    themes: light --default, dark --prefersdark, cupcake, dracula
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
